Extended build/scripts to include benchmark